# python_edu_diplom

./: .dev.env  .example.env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  billing.mk  clean-py.sh  docker-compose.yml  install-uv.sh  pyproject.toml  requirements-dev.txt  requirements.txt
auth_api/: .dockerignore  Dockerfile  README.md  entry-point.sh  pyproject.toml  requirements.txt
auth_api/db/docker-entrypoint-initdb.d/: init-db.sh
auth_api/src/: main.py
auth_api/src/alembic_async/: Dockerfile  alembic.ini  entry-point.sh  env.py  requirements.txt
auth_api/src/api/v1/: auth.py  permissions.py  roles.py
auth_api/src/core/: config.py  dependencies.py  logger.py  middleware.py
auth_api/src/core/sso/: vk.py  yandex.py
auth_api/src/db/: partition.py  postgres.py  rdb.py  seed.py
auth_api/src/models/: loginhistoryitem.py  models.py  permission.py  role.py  user.py
auth_api/src/services/: access.py  auth.py  role.py
billing/payment_api/: Dockerfile  entry-point.sh  pyproject.toml  requirements.txt
billing/payment_api/src/: main.py
billing/payment_api/src/alembic_async/: Dockerfile  alembic.ini  entry-point.sh  env.py  pyproject.toml
billing/payment_api/src/api/v1/: payment.py
billing/payment_api/src/core/: config.py  logger.py
billing/payment_api/src/db/: rdb.py
billing/payment_api/src/models/: models.py  payment.py
billing/payment_api/src/schemas/: payment.py  yookassa.py
billing/payment_api/src/services/: payment.py
common/: pyproject.toml  requirements.txt
common/docker/: Dockerfile.auth_api_alembic_async_base  Dockerfile.auth_api_base  Dockerfile.email_worker_base  Dockerfile.gui_base  Dockerfile.notification_api_base  Dockerfile.payment_api_alembic_async_base  Dockerfile.payment_api_base  Dockerfile.theatre_common
common/src/theatre/core/: auth.py  config.py  events.py  exception_handler.py  helpers.py  logger.py  rabbitmq.py  redis.py  request.py  token.py
common/src/theatre/core/sso/: base_sso.py
common/src/theatre/core/test/: benchmark.py  data.py
common/src/theatre/core/waiters/: wait_for_auth_api.py  wait_for_clickhouse.py  wait_for_db.py  wait_for_es.py  wait_for_kafka.py  wait_for_mongodb.py  wait_for_payment_api.py  wait_for_redis.py
common/src/theatre/db/: base.py  cache.py  elastic.py  models.py  postgres.py
common/src/theatre/models/: base.py  base_orm.py  events.py  notification.py
common/src/theatre/schemas/: auth_schemas.py  http_api.py  model_filters.py  notifications.py  permission_schemas.py  role_schemas.py
common/src/theatre/services/: base.py
db/docker-entrypoint-initdb.d/: init-db.sh
docker-compose/: auth_service.yml  compose.dev.yml  db.yml  mongo.yml  nginx.yml  notification.yml  rabbitmq.yml  redis.yml  threatre_base.yml
gui/: Dockerfile  entry-point.sh  pyproject.toml  requirements.txt
gui/src/: main.py
gui/src/core/: config.py  logger.py  service.py  storage.py
gui/src/frontend/: frontend.py
nginx/: nginx.conf
nginx/configs/: site.conf
notification/email-worker/: Dockerfile  entry-point.sh  requirements.txt
notification/email-worker/src/: main.py  models.py  settings.py
notification/notification-api/: Dockerfile  entry-point.sh  requirements.txt
notification/notification-api/src/: main.py
notification/notification-api/src/api/v1/: router.py
notification/notification-api/src/api/v1/notification/: router.py
notification/notification-api/src/broker/: rabbitmq.py
notification/notification-api/src/config/: __init__.py  logger.py  settings.py
notification/notification-api/src/database/: mongo.py
notification/notification-api/src/helpers/: jwt_tockens.py
notification/notification-api/src/models/: mongo.py
notification/notification-api/src/schemas/notification/: __init__.py  common.py  event_type.py  push_notification.py  request.py  response.py
notification/notification-api/src/services/: notification.py  ws_connection_manager.py
