[project]
name = "auth-api"
version = "0.1.0"
description = "ojo de llave"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "elasticsearch[async]==8.13.2",
    "fastapi[standard]==0.115.11",
    "fastapi==0.115.11",
    "fastapi-limiter==0.1.6",
    "redis==5.2.1",
    "backoff==2.2.1",
    "SQLAlchemy[asyncio]==2.0.38",
    "alembic==1.14.1",
    "typer==0.15.1",
    "passlib==1.7.4",
    "asyncpg==0.30.0",
    "pycryptodomex==3.21.0",
    "async-fastapi-jwt-auth==0.6.6",
    "sqlalchemy==2.0.38",
    "werkzeug==3.1.3",
    "asyncpg==0.30.0",
    "python-multipart==0.0.20",
    "orjson==3.10.15",
    "psycopg2-binary==2.9.10",
    "psycopg[binary]==3.2.4",
    "opentelemetry-api==1.31.0",
    "opentelemetry-sdk==1.31.0",
    "opentelemetry-instrumentation-fastapi==0.52b0",
    "opentelemetry-instrumentation-sqlalchemy==0.52b0",
    "opentelemetry-exporter-jaeger==1.21.0 ",
    "email-validator==2.2.0",
    "fastapi-sso==0.18.0",
    "python-dateutil==2.9.0",
    "itsdangerous==2.2.0",
    "python-json-logger==3.3.0",
    "sentry-sdk==1.39.1",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.16",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "httpcore==1.0.9",
    "nicegui==2.18.0"
]
