[project]
name = "payment-api"
version = "0.1.0"
description = "Payment API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "redis==5.2.1",
    "PyJWT==2.10.1",
    "pycryptodomex==3.21.0",
    "pydantic==2.10.5",
    "pydantic-core==2.27.2",
    "pydantic-settings==2.7.1",
    "fastapi==0.115.11",
    "fastapi[standard]==0.115.11",
    "sqlalchemy==2.0.38",
    "python-dateutil==2.9.0",
    "werkzeug==3.1.3",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.16",
    "attrs==25.3.0",
    "httpcore==1.0.9",
    "python-json-logger==3.3.0",
    "yookassa==3.5.0"
]
