[project]
name = "auth-api-alembic"
version = "0.1.0"
description = "ojo de llave"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "SQLAlchemy[asyncio]==2.0.38",
    "sqlalchemy==2.0.38",
    "werkzeug==3.1.3",
    "alembic==1.14.1",
    "asyncpg==0.30.0",
    "psycopg2-binary==2.9.10",
    "psycopg[binary]==3.2.4",
    "typer==0.15.1",
    "passlib==1.7.4",
    "python-multipart==0.0.20",
    "pydantic==2.10.5",
    "pydantic-core==2.27.2",
    "pydantic-settings==2.7.1",
    "fastapi==0.115.11",    
    "python-dateutil==2.9.0",
    "anyio==4.9.0"
]
